fonts and mobile-only for now

--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="./styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Rowdies&display=swap" rel="stylesheet">  <link rel="stylesheet" href="./styles.css">
 
   <title>Simple Fullscreen Landing Page</title>
 </head>
 
 <body>
   <header>
-    <h1>This is a landing page</h1>
-    <p>Enjoy the amazing background image!</p>
+    <div class="title-background">
+      <h1 class="main-title">This is a Landing Page</h1>
+      <p class="subtitle">Enjoy the amazing background image!</p>
+    </div>
   </header>
 
   <section>
@@ -21,7 +23,10 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, sunt?
       Cupiditate fugiat facilis, aperiam ex corrupti voluptatum repellendus
       quis eaque temporibus, architecto, nihil ipsa magnam illum omnis nemo
-      inventore exercitationem?
+      inventore exercitationem?<br><br>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore neque,
+      a minus quisquam odit fugit fuga sit quae optio temporibus rerum consequatur
+      eligendi omnis facere! Iusto aperiam modi deleniti minima.
     </p>
   </section>
 
@@ -30,7 +35,10 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, sunt?
       Cupiditate fugiat facilis, aperiam ex corrupti voluptatum repellendus
       quis eaque temporibus, architecto, nihil ipsa magnam illum omnis nemo
-      inventore exercitationem?
+      inventore exercitationem?<br><br>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore neque,
+      a minus quisquam odit fugit fuga sit quae optio temporibus rerum consequatur
+      eligendi omnis facere! Iusto aperiam modi deleniti minima.
     </p>
   </section>
 
@@ -39,7 +47,10 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, sunt?
       Cupiditate fugiat facilis, aperiam ex corrupti voluptatum repellendus
       quis eaque temporibus, architecto, nihil ipsa magnam illum omnis nemo
-      inventore exercitationem?
+      inventore exercitationem?<br><br>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore neque,
+      a minus quisquam odit fugit fuga sit quae optio temporibus rerum consequatur
+      eligendi omnis facere! Iusto aperiam modi deleniti minima.
     </p>
   </section>
 </body>
