added icons, footer and media query

--- a/index.html
+++ b/index.html
@@ -6,19 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Rowdies&display=swap" rel="stylesheet">  <link rel="stylesheet" href="./styles.css">
-
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  
   <title>Simple Fullscreen Landing Page</title>
 </head>
 
 <body>
   <header>
     <div class="title-background">
-      <h1 class="main-title">This is a Landing Page</h1>
+      <h1 class="main-title">This is a Fullscreen Landing Page</h1>
       <p class="subtitle">Enjoy the amazing background image!</p>
     </div>
+    <i class="material-icons md-120">keyboard_arrow_down</i>
+
   </header>
 
   <section>
+    <i class="material-icons">terrain</i>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, sunt?
       Cupiditate fugiat facilis, aperiam ex corrupti voluptatum repellendus
@@ -31,6 +35,7 @@
   </section>
 
   <section>
+    <i class="material-icons">wb_sunny</i>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, sunt?
       Cupiditate fugiat facilis, aperiam ex corrupti voluptatum repellendus
@@ -43,6 +48,7 @@
   </section>
 
   <section>
+    <i class="material-icons">nature</i>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, sunt?
       Cupiditate fugiat facilis, aperiam ex corrupti voluptatum repellendus
@@ -53,6 +59,11 @@
       eligendi omnis facere! Iusto aperiam modi deleniti minima.
     </p>
   </section>
+
+  <footer>
+    <i class="material-icons">spa</i>
+    <p>anylogo</p>
+  </footer>
 </body>
 
 </html>
